--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -15,10 +15,10 @@ name: Codacy Security Scan
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "security" ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ]
+    branches: [ "security" ]
   schedule:
     - cron: '27 13 * * 2'
 
